--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,9 @@
 @import "tailwindcss";
+
+.container{
+    max-width: 1480px;
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+    padding: 0, 15px;
+}
